--- a/css/stylesEXTR.css
+++ b/css/stylesEXTR.css
@@ -51,10 +51,9 @@ background: #00000050;
 }
 .medio p {
     font-family: 'Arial';
-    font-weight: bold;
     display: inline-block;
     color: #000;
-    font-size: 40px;
+    font-size: 26px;
     padding: 40px 80px 40px 80px;
 }
 .medio2 {
@@ -75,7 +74,7 @@ background: #00000050;
 .medio2 h1 {
     font-family: 'Arial';
     color: #fa8801;
-    margin: 40px 0 0 0;
+    margin: 40px 0 20px 0;
     font-size: 50px;
 }
 .medio2 dir {
@@ -124,29 +123,6 @@ background: #00000050;
     width: 700px;
     margin: 80px 0 0 0;
 }
-.sig .cfc2 {
-    display: inline-block;
-    font-size: 50px;
-    width: 600px;
-    margin: 60px 0 0 0; 
-}
-
-/*--------------------- CSS Deslisado bajo video inicio ------------------------------ */
-
-.deslisado {
-text-align: center;
-width: 100%;
-height: 850px;
-}
-.deslisado .img1 {
-display: inline-block;
-width: 700px;
-height: 700px;
-border-radius: 100px;
-filter: hue-rotate(50deg);
-box-shadow: 0px 20px 0 #000000;
-}
-/*--------------------- CSS Deslisado bajo video final ------------------------------ */
 
 /*--------------------- OKITO inicio-----------------------------*/
 .okito {
@@ -160,4 +136,9 @@ padding: 0;
 width: 400px;
 height: 400px;
 }
-/*--------------------- OKITO Final-----------------------------*/
+
+
+/*--------------------- Construcción -----------------------------*/
+.cons img {
+    width: 100%;
+}
