--- a/css/styles.css
+++ b/css/styles.css
@@ -28,13 +28,13 @@ a{
 	justify-content: space-between;
 	box-sizing: border-box;
 	margin: 20px 15px;
+    background: #e2e2e2;
 }
 .model{
-	height: 200px;
+	height: 100px;
 	max-height: 100%;
 	max-width: 100%;
-	padding: 0px 0 0 0px;
-	filter: grayscale(1);
+	padding: 0px 0 20px 0px;
 }
 .details{
 	display: flex;
@@ -67,7 +67,7 @@ a{
 	height: 20px;
 }
 .box:hover{
-	background-color: #ffffff;
+	background-color: #000000;
 	transform-style: preserve-3d;
 	transform: scale(1.05);
 	transition: all ease 0.3s;
@@ -86,10 +86,44 @@ a{
     color: #ffffff;
 }
 .box:hover img {
-    filter: drop-shadow(0px 0px 10px black);
-    transform: rotate(-30deg);
+    filter: drop-shadow(0px 0px 10px rgb(255, 255, 255));
     transition-duration: 0.5s;
 }
+
+.redondo {
+    width: 290;
+    height: 0;
+    position: absolute;
+  }
+  .redondo p {
+    font-size: 0;
+    position: absolute;
+  }
+  
+  .box:hover .redondo p {
+    font-size: 40px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 15px 0 0 0;
+    position: absolute;
+    top: 50px;
+    left: 62px;
+  }
+  .box:hover .redondo {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    transition: width .3s, height .3s, margin .3s;
+    margin: 0;
+    padding: 0;
+    border-radius: 20px 20px 20px 20px;
+    background: #000000;
+    opacity: 0.8;
+  }
+  
+
 /*--responsive for mobile phone--*/
 
 
